# projects-web

./: .gitignore  README.md
Solution/projects-web/: CMakeLists.txt  program.c  program.cpp  projects-web.kdev4
Solution/projects-web/src/: CMakeLists.txt  ProjectsApplication.cpp  ProjectsApplication.h  ProjectsApplication.hpp  projectsApplication.cpp  projectsApplication.hpp
Solution/projects-web/src/dbo/: account.cpp  account.hpp  activityDto.cpp  activityDto.hpp  activityToCategory.cpp  activityToCategory.hpp  category.cpp  category.hpp  dboTraits.h  role.cpp  role.hpp  schemaVersion.cpp  schemaVersion.hpp  typedefs.h  user.cpp  user.hpp
